--- a/css/styles.css
+++ b/css/styles.css
@@ -77,8 +77,7 @@ body {
 
 /*========== HEDER===================*/
 .section-nav-site {
-    /* padding-top: 24px;
-    padding-bottom: 24px; */
+    margin-bottom: -1px;
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: #ececec;
@@ -186,7 +185,8 @@ body {
 .current::after {
     content: "";
     position: absolute;
-    bottom: -1px;
+    left: 0;
+    bottom: 0;
     height: 4px;
     width: 100%;
     display: block;
@@ -220,7 +220,7 @@ body {
 
 .hero h1 {
     margin-bottom: 30px;
-    padding: 1px 0;
+    padding: 0;
     font-size: 44px;
     line-height: 1.36;
 
@@ -356,23 +356,32 @@ body {
 
 .work-img {
     position: relative;
+    width: 370px;
+    height: 294px;
+}
+
+.box-text {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .text-img {
-    position: absolute;
-    width: 100%;
-    bottom: 0px;
-    background: rgba(47, 48, 58, 0.8);
-
-
     text-transform: uppercase;
-    text-align: center;
-    padding: 27px 0px;
     font-weight: bold;
+    font-size: 14px;
     line-height: 1.14;
     font-style: normal;
     color: var(--background-color);
 }
+
+/* */
 
 /*====end section what are we doing====*/
 
@@ -583,6 +592,7 @@ address {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: var(--background-color)
 }
 
 .footer-social-list:hover,
@@ -590,12 +600,6 @@ address {
     background-color: var(--second-color-link)
 }
 
-.footer-social-icon {
-    content: "";
-    width: 20px;
-    height: 20px;
-    fill: var(--background-color);
-}
 
 /*=======end footer========*/
 
@@ -650,7 +654,6 @@ address {
     justify-content: center;
 }
 
-
 .cards-product {
 
     width: 370px;
@@ -669,13 +672,11 @@ address {
 }
 
 .card-container {
-
     width: 370px;
     background: #FFFFFF;
     text-decoration: none;
     display: block;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 
 }
 
@@ -688,6 +689,7 @@ address {
 
 .botton-part-cards {
     min-width: 322px;
+    height: 100%;
     padding: 20px 24px;
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
@@ -721,7 +723,7 @@ address {
     height: 100%;
     padding: 63px 24px;
 
-    transform: translateY(101%);
+    transform: translateY(100%);
     transition: transform 250ms ease;
 
     background: rgba(33, 150, 243, 0.9);
